# Django-Site-Toikana

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py
frontend/: about.html  dishDetail.html  index.html  logIn.html  menu.html
frontend/scss/: index.css  index.css.map  index.scss
frontend/scss/components/: _menu.scss
frontend/scss/helpers/: _fonts.scss  _mixins.scss
home_page/: admin.py  forms.py  forms.py.orig  models.py  urls.py  urls.py.orig  views.py  views.py.orig
home_page/migrations/: 0001_initial.py  0002_alter_menu_menu.py  0002_news.py  0003_booking.py  0003_news_image.py  0004_contact.py  0004_rename_guests_num_booking_guests_and_more.py  0005_alter_menu_menu.py  0005_rename_adress_map_contact_address_map_and_more.py  0006_alter_booking_branch.py  0006_chef.py  0007_branch_review.py  0007_gallery.py
main/: settings.py  urls.py
static/: signUp.html
static/css/: index.css  index.css.map  index.scss  menu.css
static/css/sections/: _about.scss  (+11 more)
static/js/: script.js  swiper.js
templates/: about.html  add_new.html  base.html  base_header.html  base_header_footer.html  booking.html  confirm_delete.html  contact.html  dish_detail.html  home.html  index.html  index_booking.html  menu.html  menu_type.html  news.html  old_about.html  old_dish_detail.html  old_index.html  old_menu.html  signUp.html  update.html  view_booking.html  view_gallery.html  view_reviews.html
templates/registration/: login.html  signup.html
(+11 files in other folders)
