[tool.poetry]
name = "django-site-toikana"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
pretty-errors = "^1.2.25"
Pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
